Fixed extremely long user names overflowing the MemberInfoPopover

--- a/src/modules/core/components/InfoPopover/InfoPopover.css
+++ b/src/modules/core/components/InfoPopover/InfoPopover.css
@@ -20,7 +20,6 @@
 }
 
 .displayName {
-  composes: inlineEllipsis from '~styles/text.css';
   margin: 0 0 6px 0;
   font-weight: var(--weight-bold);
   color: var(--colony-black);
@@ -44,8 +43,9 @@
 }
 
 .userName {
-  composes: inlineEllipsis from '~styles/text.css';
+  composes: inlineEllipsis from "~styles/text.css";
   margin-bottom: 2px;
+  width: 100%;
 }
 
 .userName a {
@@ -102,4 +102,6 @@
   align-items: flex-start;
   flex-direction: column;
   margin-left: 12px;
+  width: 100%;
+  overflow: hidden;
 }
